--- a/asbestosWasteTransport.css
+++ b/asbestosWasteTransport.css
@@ -26,6 +26,7 @@ main p {
 main ul {
     /* list-style-type: square; Use square bullet points */
     margin-left: 20px; /* Indent the list */
+    color: #666;
 }
 
 main ul li {
@@ -54,8 +55,13 @@ main h2:last-child {
     margin-top: 50px; /* Add more top margin */
 }
 
-main ul {
-    color: #666;
+main img {
+    object-fit: contain;
+    padding-right: 10vw;
+}
+
+.first-tier-list {
+    padding-bottom: 14px;
 }
 
 .lines {
