--- a/services.css
+++ b/services.css
@@ -1,12 +1,12 @@
 main {
     padding: 20px;
-    width: 1600px;
+    width: 83vw;
     margin: 0 auto;
 }
 
 main h1 {
     font-size: 28px; /* Increase font size */
-    color: #333;
+    color: #0055a6;
     margin-bottom: 20px; /* Add some bottom margin */
 }
 
@@ -16,7 +16,7 @@ main div {
 
 main h2 {
     font-size: 24px; /* Increase font size */
-    color: #007bff; /* Blue color */
+    color: #0055a6; /* Blue color */
     margin-bottom: 10px; /* Add some bottom margin */
 }
 
@@ -27,7 +27,7 @@ main p {
 }
 
 main a {
-    color: #007bff; /* Blue color */
+    color: #0055a6; /* Blue color */
     text-decoration: none;
     display: block; /* Make the entire block clickable */
     font-weight: bold; /* Make the link bold */
@@ -53,4 +53,10 @@ main div > a {
 
 .service-box{
     width: 30vw;
+}
+
+.service-img{
+    width:300px;
+    height:300px;
+    object-fit: contain;
 }
