--- a/contact.css
+++ b/contact.css
@@ -1,12 +1,18 @@
 main {
     padding: 20px;
-    width:1600px;
+    width:83vw;
     margin: 0 auto;
 }
 
 main h1 {
     font-size: 24px;
-    color: #333;
+    color: #0055a6;
+}
+
+main h2 {
+    font-size:1.4rem;
+    color: #0055a6;
+    padding-top:10px;
 }
 
 main p {
@@ -22,6 +28,12 @@ main form {
 main form label {
     display: block;
     margin-bottom: 5px;
+    color: #666;
+}
+
+main form small {
+    color: red;
+    display: block;
 }
 
 main form input[type="text"],
@@ -71,4 +83,12 @@ main form textarea {
     border: 1px solid #ccc;
     border-radius: 4px;
     resize: vertical;
+}
+
+.lines {
+    border: 1px solid #ee3a43;
+    width: 100%;
+    height: 2px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
